# rflogs

./: .gitignore  README.md  pyproject.toml
rflogs/: __init__.py
tests/: output.xml  test_cli_options.py  test_xml_parsing.py
tests/data/: browser_lib_test.robot  log.html  output.xml  playwright-log.txt  report.html  selenium_lib_test.robot
tests/test_data/: custom_log.html  custom_output.xml
