[tool.poetry]
name = "rflogs"
version = "0.8.0"
description = "A CLI tool for uploading Robot Framework test results to rflogs.io"
authors = ["Mikko Korpela <mikko.korpela@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "rflogs" },
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.32.3"
robotframework = ">=6.0,<9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
rflogs = "rflogs:main"
